[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/battle/USER_SOUL/USER_SOUL.gd" type="Script" id=1]
[ext_resource path="res://assets/battle/assetUSERSOUL.tres" type="SpriteFrames" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.5

[node name="USER_SOUL" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="spriteJoint" type="Node2D" parent="."]

[node name="sprite" type="AnimatedSprite" parent="spriteJoint"]
position = Vector2( 0.5, 0.5 )
frames = ExtResource( 2 )
animation = "SOUL"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitboxCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxCollision"]
shape = SubResource( 1 )
